--- a/views/home.pug
+++ b/views/home.pug
@@ -3,6 +3,9 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel="stylesheet" href="/styles/styles.css")
         title Catcha Mind
     body
         h1 Hello!
+        script(src="http://localhost:4000/socket.io/socket.io.js")
+        script(src="/js/main.js")
