--- a/views/home.pug
+++ b/views/home.pug
@@ -6,6 +6,10 @@ html(lang="en")
         link(rel="stylesheet" href="/styles/styles.css")
         title Catcha Mind
     body
-        h1 Hello!
+        .login_box
+            form#jsLoginForm
+                input(placeholder="Enter your nickname" type="text")
+        .game_box
+            h2 Your are logged in
         script(src="http://localhost:4000/socket.io/socket.io.js")
         script(src="/js/main.js")
