1. share events both in server and client side 2. share socket in client side

--- a/views/home.pug
+++ b/views/home.pug
@@ -11,5 +11,7 @@ html(lang="en")
                 input(placeholder="Enter your nickname" type="text")
         .game_box
             h2 Your are logged in
+        script.
+            window.events=!{events}
         script(src="http://localhost:4000/socket.io/socket.io.js")
         script(src="/js/main.js")
