--- a/views/home.pug
+++ b/views/home.pug
@@ -10,8 +10,10 @@ html(lang="en")
             form#jsLoginForm
                 input(placeholder="Enter your nickname" type="text")
         .game_box
-            h2 Your are logged in
-        div#jsNotifications
+            .chat
+                ul.chat__messages#jsMessages
+                form.chat__form#jsSendMessage
+                    input(placeholder="Enter message" type="text")
         script.
             window.events=!{events}
         script(src="http://localhost:4000/socket.io/socket.io.js")
