added user list div

--- a/views/home.pug
+++ b/views/home.pug
@@ -27,6 +27,7 @@ html(lang="en")
                         .control__color(style="background-color: #00008BFF")
                         .control__color(style="background-color: #FF00FFFF")
                         .control__color(style="background-color: #DB7093FF")
+            .user__board#jsUserBoard
             .chat
                 ul.chat__messages#jsMessages
                 form.chat__form#jsSendMessage
